// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid target 1`] = `
"Config is invalid:
{
  \\"mac\\": [
    {
      \\"target\\": [
        \\"Should be object\\",
        \\"Should be equal to one of the allowed values\\",
        \\"Should be string\\",
        \\"Invalid option object\\"
      ],
      \\"target[0]\\": [
        \\"Should be object\\",
        \\"Should be equal to one of the allowed values\\",
        \\"Invalid option object\\"
      ]
    },
    \\"Invalid option object\\"
  ]
}

Raw validation errors: [
  {
    \\"keyword\\": \\"type\\",
    \\"dataPath\\": \\".mac.target\\",
    \\"schemaPath\\": \\"#/definitions/TargetConfig/type\\",
    \\"params\\": {
      \\"type\\": \\"object\\"
    },
    \\"message\\": \\"should be object\\"
  },
  {
    \\"keyword\\": \\"type\\",
    \\"dataPath\\": \\".mac.target[0]\\",
    \\"schemaPath\\": \\"#/definitions/TargetConfig/type\\",
    \\"params\\": {
      \\"type\\": \\"object\\"
    },
    \\"message\\": \\"should be object\\"
  },
  {
    \\"keyword\\": \\"enum\\",
    \\"dataPath\\": \\".mac.target[0]\\",
    \\"schemaPath\\": \\"#/properties/target/anyOf/1/items/anyOf/1/enum\\",
    \\"params\\": {
      \\"allowedValues\\": [
        \\"7z\\",
        \\"default\\",
        \\"dir\\",
        \\"dmg\\",
        \\"mas\\",
        \\"pkg\\",
        \\"tar.bz2\\",
        \\"tar.gz\\",
        \\"tar.lz\\",
        \\"tar.xz\\",
        \\"zip\\"
      ]
    },
    \\"message\\": \\"should be equal to one of the allowed values\\"
  },
  {
    \\"keyword\\": \\"anyOf\\",
    \\"dataPath\\": \\".mac.target[0]\\",
    \\"schemaPath\\": \\"#/properties/target/anyOf/1/items/anyOf\\",
    \\"params\\": {},
    \\"message\\": \\"should match some schema in anyOf\\"
  },
  {
    \\"keyword\\": \\"enum\\",
    \\"dataPath\\": \\".mac.target\\",
    \\"schemaPath\\": \\"#/properties/target/anyOf/2/enum\\",
    \\"params\\": {
      \\"allowedValues\\": [
        \\"7z\\",
        \\"default\\",
        \\"dir\\",
        \\"dmg\\",
        \\"mas\\",
        \\"pkg\\",
        \\"tar.bz2\\",
        \\"tar.gz\\",
        \\"tar.lz\\",
        \\"tar.xz\\",
        \\"zip\\"
      ]
    },
    \\"message\\": \\"should be equal to one of the allowed values\\"
  },
  {
    \\"keyword\\": \\"type\\",
    \\"dataPath\\": \\".mac.target\\",
    \\"schemaPath\\": \\"#/properties/target/anyOf/2/type\\",
    \\"params\\": {
      \\"type\\": \\"string\\"
    },
    \\"message\\": \\"should be string\\"
  },
  {
    \\"keyword\\": \\"type\\",
    \\"dataPath\\": \\".mac.target\\",
    \\"schemaPath\\": \\"#/properties/target/anyOf/3/type\\",
    \\"params\\": {
      \\"type\\": \\"null\\"
    },
    \\"message\\": \\"should be null\\"
  },
  {
    \\"keyword\\": \\"anyOf\\",
    \\"dataPath\\": \\".mac.target\\",
    \\"schemaPath\\": \\"#/properties/target/anyOf\\",
    \\"params\\": {},
    \\"message\\": \\"should match some schema in anyOf\\"
  },
  {
    \\"keyword\\": \\"type\\",
    \\"dataPath\\": \\".mac\\",
    \\"schemaPath\\": \\"#/properties/mac/anyOf/1/type\\",
    \\"params\\": {
      \\"type\\": \\"null\\"
    },
    \\"message\\": \\"should be null\\"
  },
  {
    \\"keyword\\": \\"anyOf\\",
    \\"dataPath\\": \\".mac\\",
    \\"schemaPath\\": \\"#/properties/mac/anyOf\\",
    \\"params\\": {},
    \\"message\\": \\"should match some schema in anyOf\\"
  }
]"
`;

exports[`only zip 1`] = `
Object {
  "mac": Array [
    Object {
      "file": "latest-mac.json",
    },
    Object {
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
    },
  ],
}
`;

exports[`pkg 1`] = `
Object {
  "mac": Array [
    Object {
      "file": "Test App ßW-1.1.0.pkg",
      "safeArtifactName": "TestApp-1.1.0.pkg",
    },
  ],
}
`;

exports[`pkg scripts 1`] = `
Object {
  "mac": Array [
    Object {
      "file": "Test App ßW-1.1.0.pkg",
      "safeArtifactName": "TestApp-1.1.0.pkg",
    },
  ],
}
`;

exports[`pkg scripts 2`] = `
Array [
  "Test App ßW.app",
  "Test App ßW.app/Contents",
  "Test App ßW.app/Contents/Frameworks",
  "Test App ßW.app/Contents/Info.plist",
  "Test App ßW.app/Contents/MacOS",
  "Test App ßW.app/Contents/PkgInfo",
  "Test App ßW.app/Contents/Resources",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework",
  "Test App ßW.app/Contents/Frameworks/Squirrel.framework",
  "Test App ßW.app/Contents/Frameworks/Test App ßW Helper EH.app",
  "Test App ßW.app/Contents/Frameworks/Test App ßW Helper NP.app",
  "Test App ßW.app/Contents/Frameworks/Test App ßW Helper.app",
  "Test App ßW.app/Contents/MacOS/Test App ßW",
  "Test App ßW.app/Contents/Resources/am.lproj",
  "Test App ßW.app/Contents/Resources/app.asar",
  "Test App ßW.app/Contents/Resources/ar.lproj",
  "Test App ßW.app/Contents/Resources/bg.lproj",
  "Test App ßW.app/Contents/Resources/bn.lproj",
  "Test App ßW.app/Contents/Resources/ca.lproj",
  "Test App ßW.app/Contents/Resources/cs.lproj",
  "Test App ßW.app/Contents/Resources/da.lproj",
  "Test App ßW.app/Contents/Resources/de.lproj",
  "Test App ßW.app/Contents/Resources/el.lproj",
  "Test App ßW.app/Contents/Resources/electron.asar",
  "Test App ßW.app/Contents/Resources/en.lproj",
  "Test App ßW.app/Contents/Resources/en_GB.lproj",
  "Test App ßW.app/Contents/Resources/es.lproj",
  "Test App ßW.app/Contents/Resources/es_419.lproj",
  "Test App ßW.app/Contents/Resources/et.lproj",
  "Test App ßW.app/Contents/Resources/fa.lproj",
  "Test App ßW.app/Contents/Resources/fi.lproj",
  "Test App ßW.app/Contents/Resources/fil.lproj",
  "Test App ßW.app/Contents/Resources/fr.lproj",
  "Test App ßW.app/Contents/Resources/gu.lproj",
  "Test App ßW.app/Contents/Resources/he.lproj",
  "Test App ßW.app/Contents/Resources/hi.lproj",
  "Test App ßW.app/Contents/Resources/hr.lproj",
  "Test App ßW.app/Contents/Resources/hu.lproj",
  "Test App ßW.app/Contents/Resources/id.lproj",
  "Test App ßW.app/Contents/Resources/it.lproj",
  "Test App ßW.app/Contents/Resources/ja.lproj",
  "Test App ßW.app/Contents/Resources/kn.lproj",
  "Test App ßW.app/Contents/Resources/ko.lproj",
  "Test App ßW.app/Contents/Resources/lt.lproj",
  "Test App ßW.app/Contents/Resources/lv.lproj",
  "Test App ßW.app/Contents/Resources/ml.lproj",
  "Test App ßW.app/Contents/Resources/mr.lproj",
  "Test App ßW.app/Contents/Resources/ms.lproj",
  "Test App ßW.app/Contents/Resources/nb.lproj",
  "Test App ßW.app/Contents/Resources/nl.lproj",
  "Test App ßW.app/Contents/Resources/pl.lproj",
  "Test App ßW.app/Contents/Resources/pt_BR.lproj",
  "Test App ßW.app/Contents/Resources/pt_PT.lproj",
  "Test App ßW.app/Contents/Resources/ro.lproj",
  "Test App ßW.app/Contents/Resources/ru.lproj",
  "Test App ßW.app/Contents/Resources/sk.lproj",
  "Test App ßW.app/Contents/Resources/sl.lproj",
  "Test App ßW.app/Contents/Resources/sr.lproj",
  "Test App ßW.app/Contents/Resources/sv.lproj",
  "Test App ßW.app/Contents/Resources/sw.lproj",
  "Test App ßW.app/Contents/Resources/ta.lproj",
  "Test App ßW.app/Contents/Resources/te.lproj",
  "Test App ßW.app/Contents/Resources/Test App ßW.icns",
  "Test App ßW.app/Contents/Resources/th.lproj",
  "Test App ßW.app/Contents/Resources/tr.lproj",
  "Test App ßW.app/Contents/Resources/uk.lproj",
  "Test App ßW.app/Contents/Resources/vi.lproj",
  "Test App ßW.app/Contents/Resources/zh_CN.lproj",
  "Test App ßW.app/Contents/Resources/zh_TW.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Electron Framework",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Libraries",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Resources",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework/Headers",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework/Mantle",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework/Modules",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework/Resources",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework/Versions",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Headers",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Modules",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/ReactiveCocoa",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Resources",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions",
  "Test App ßW.app/Contents/Frameworks/Squirrel.framework/Headers",
  "Test App ßW.app/Contents/Frameworks/Squirrel.framework/Modules",
  "Test App ßW.app/Contents/Frameworks/Squirrel.framework/Resources",
  "Test App ßW.app/Contents/Frameworks/Squirrel.framework/Squirrel",
  "Test App ßW.app/Contents/Frameworks/Squirrel.framework/Versions",
  "Test App ßW.app/Contents/Frameworks/Test App ßW Helper EH.app/Contents",
  "Test App ßW.app/Contents/Frameworks/Test App ßW Helper NP.app/Contents",
  "Test App ßW.app/Contents/Frameworks/Test App ßW Helper.app/Contents",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/Current",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework/Versions/A",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework/Versions/Current",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/Current",
  "Test App ßW.app/Contents/Frameworks/Squirrel.framework/Versions/A",
  "Test App ßW.app/Contents/Frameworks/Squirrel.framework/Versions/Current",
  "Test App ßW.app/Contents/Frameworks/Test App ßW Helper EH.app/Contents/Info.plist",
  "Test App ßW.app/Contents/Frameworks/Test App ßW Helper EH.app/Contents/MacOS",
  "Test App ßW.app/Contents/Frameworks/Test App ßW Helper EH.app/Contents/PkgInfo",
  "Test App ßW.app/Contents/Frameworks/Test App ßW Helper NP.app/Contents/Info.plist",
  "Test App ßW.app/Contents/Frameworks/Test App ßW Helper NP.app/Contents/MacOS",
  "Test App ßW.app/Contents/Frameworks/Test App ßW Helper NP.app/Contents/PkgInfo",
  "Test App ßW.app/Contents/Frameworks/Test App ßW Helper.app/Contents/Info.plist",
  "Test App ßW.app/Contents/Frameworks/Test App ßW Helper.app/Contents/MacOS",
  "Test App ßW.app/Contents/Frameworks/Test App ßW Helper.app/Contents/PkgInfo",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Electron Framework",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Libraries",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework/Versions/A/Headers",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework/Versions/A/Mantle",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework/Versions/A/Modules",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework/Versions/A/Resources",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Modules",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/ReactiveCocoa",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Resources",
  "Test App ßW.app/Contents/Frameworks/Squirrel.framework/Versions/A/Headers",
  "Test App ßW.app/Contents/Frameworks/Squirrel.framework/Versions/A/Modules",
  "Test App ßW.app/Contents/Frameworks/Squirrel.framework/Versions/A/Resources",
  "Test App ßW.app/Contents/Frameworks/Squirrel.framework/Versions/A/Squirrel",
  "Test App ßW.app/Contents/Frameworks/Test App ßW Helper EH.app/Contents/MacOS/Test App ßW Helper EH",
  "Test App ßW.app/Contents/Frameworks/Test App ßW Helper NP.app/Contents/MacOS/Test App ßW Helper NP",
  "Test App ßW.app/Contents/Frameworks/Test App ßW Helper.app/Contents/MacOS/Test App ßW Helper",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Libraries/libffmpeg.dylib",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Libraries/libnode.dylib",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/am.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/ar.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/bg.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/bn.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/ca.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/content_shell.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/crashpad_handler",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/cs.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/da.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/de.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/el.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/en.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/en_GB.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/es.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/es_419.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/et.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/fa.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/fi.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/fil.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/fr.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/gu.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/he.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/hi.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/hr.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/hu.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/icudtl.dat",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/id.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/Info.plist",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/it.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/ja.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/kn.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/ko.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/lt.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/lv.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/MainMenu.nib",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/ml.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/mr.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/ms.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/natives_blob.bin",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/nb.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/nl.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/pl.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/pt_BR.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/pt_PT.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/ro.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/ru.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/sk.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/sl.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/snapshot_blob.bin",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/sr.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/sv.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/sw.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/ta.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/te.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/th.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/tr.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/uk.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/vi.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/zh_CN.lproj",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/zh_TW.lproj",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework/Versions/A/Headers/Mantle.h",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework/Versions/A/Headers/MTLJSONAdapter.h",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework/Versions/A/Headers/MTLManagedObjectAdapter.h",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework/Versions/A/Headers/MTLModel+NSCoding.h",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework/Versions/A/Headers/MTLModel.h",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework/Versions/A/Headers/MTLValueTransformer.h",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework/Versions/A/Headers/NSArray+MTLManipulationAdditions.h",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework/Versions/A/Headers/NSDictionary+MTLManipulationAdditions.h",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework/Versions/A/Headers/NSObject+MTLComparisonAdditions.h",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework/Versions/A/Headers/NSValueTransformer+MTLInversionAdditions.h",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework/Versions/A/Headers/NSValueTransformer+MTLPredefinedTransformerAdditions.h",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework/Versions/A/Modules/module.modulemap",
  "Test App ßW.app/Contents/Frameworks/Mantle.framework/Versions/A/Resources/Info.plist",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/EXTKeyPathCoding.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/EXTScope.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/metamacros.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/NSArray+RACSequenceAdditions.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/NSControl+RACCommandSupport.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/NSControl+RACTextSignalSupport.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/NSData+RACSupport.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/NSDictionary+RACSequenceAdditions.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/NSEnumerator+RACSequenceAdditions.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/NSFileHandle+RACSupport.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/NSIndexSet+RACSequenceAdditions.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/NSNotificationCenter+RACSupport.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/NSObject+RACAppKitBindings.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/NSObject+RACDeallocating.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/NSObject+RACLifting.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/NSObject+RACPropertySubscribing.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/NSObject+RACSelectorSignal.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/NSOrderedSet+RACSequenceAdditions.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/NSSet+RACSequenceAdditions.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/NSString+RACSequenceAdditions.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/NSString+RACSupport.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/NSText+RACSignalSupport.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/NSURLConnection+RACSupport.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/NSUserDefaults+RACSupport.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACBacktrace.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACBehaviorSubject.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACChannel.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACCommand.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACCompoundDisposable.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACDisposable.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACEvent.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACGroupedSignal.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACKVOChannel.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACMulticastConnection.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACQueueScheduler+Subclass.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACQueueScheduler.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACReplaySubject.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACScheduler+Subclass.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACScheduler.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACScopedDisposable.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACSequence.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACSerialDisposable.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACSignal+Operations.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACSignal.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACStream.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACSubject.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACSubscriber.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACSubscriptingAssignmentTrampoline.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACTargetQueueScheduler.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACTestScheduler.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACTuple.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/RACUnit.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Headers/ReactiveCocoa.h",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Modules/module.modulemap",
  "Test App ßW.app/Contents/Frameworks/ReactiveCocoa.framework/Versions/A/Resources/Info.plist",
  "Test App ßW.app/Contents/Frameworks/Squirrel.framework/Versions/A/Headers/NSBundle+SQRLVersionExtensions.h",
  "Test App ßW.app/Contents/Frameworks/Squirrel.framework/Versions/A/Headers/NSProcessInfo+SQRLVersionExtensions.h",
  "Test App ßW.app/Contents/Frameworks/Squirrel.framework/Versions/A/Headers/SQRLDownloadedUpdate.h",
  "Test App ßW.app/Contents/Frameworks/Squirrel.framework/Versions/A/Headers/SQRLUpdate.h",
  "Test App ßW.app/Contents/Frameworks/Squirrel.framework/Versions/A/Headers/SQRLUpdater.h",
  "Test App ßW.app/Contents/Frameworks/Squirrel.framework/Versions/A/Headers/Squirrel.h",
  "Test App ßW.app/Contents/Frameworks/Squirrel.framework/Versions/A/Modules/module.modulemap",
  "Test App ßW.app/Contents/Frameworks/Squirrel.framework/Versions/A/Resources/Info.plist",
  "Test App ßW.app/Contents/Frameworks/Squirrel.framework/Versions/A/Resources/ShipIt",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/am.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/ar.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/bg.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/bn.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/ca.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/cs.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/da.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/de.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/el.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/en.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/en_GB.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/es.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/es_419.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/et.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/fa.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/fi.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/fil.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/fr.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/gu.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/he.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/hi.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/hr.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/hu.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/id.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/it.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/ja.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/kn.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/ko.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/lt.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/lv.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/ml.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/mr.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/ms.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/nb.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/nl.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/pl.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/pt_BR.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/pt_PT.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/ro.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/ru.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/sk.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/sl.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/sr.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/sv.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/sw.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/ta.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/te.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/th.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/tr.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/uk.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/vi.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/zh_CN.lproj/locale.pak",
  "Test App ßW.app/Contents/Frameworks/Electron Framework.framework/Versions/A/Resources/zh_TW.lproj/locale.pak",
]
`;

exports[`pkg scripts 3`] = `
Object {
  "choice": Array [
    Object {
      "id": "default",
      "title": "Test App ßW",
      "versStr": "1.1.0",
    },
    Object {
      "customLocation": "/Applications",
      "id": "org.electron-builder.testApp",
      "pkg-ref": Object {
        "id": "org.electron-builder.testApp",
      },
      "title": "Test App ßW",
      "visible": "false",
    },
  ],
  "choices-outline": Object {
    "line": Object {
      "choice": "default",
      "line": Object {
        "choice": "org.electron-builder.testApp",
      },
    },
  },
  "minSpecVersion": "2",
  "options": Object {
    "customize": "never",
    "hostArchitectures": "x86_64",
    "require-scripts": "false",
  },
  "pkg-ref": Array [
    Object {
      "bundle-version": Object {
        "bundle": Object {
          "CFBundleShortVersionString": "1.1.0",
          "id": "org.electron-builder.testApp",
          "path": "Test App ßW.app",
        },
      },
      "id": "org.electron-builder.testApp",
    },
    Object {
      "_": "#org.electron-builder.testApp.pkg",
      "id": "org.electron-builder.testApp",
      "installKBytes": "109704",
      "onConclusion": "none",
      "version": "1.1.0",
    },
  ],
  "product": Object {
    "id": "org.electron-builder.testApp",
  },
  "title": "Test App ßW",
  "volume-check": Object {
    "allowed-os-versions": Object {
      "os-version": Object {
        "min": "10.9.0",
      },
    },
  },
}
`;

exports[`tar.gz 1`] = `
Object {
  "mac": Array [
    Object {
      "file": "Test App ßW-1.1.0-mac.tar.gz",
      "safeArtifactName": "TestApp-1.1.0-mac.tar.gz",
    },
  ],
}
`;
